syntax = "prpto3";

package file;

option go_package = "./pb";

message ListFilesRequest {};
message ListFilesResponse {
  repeated string fileNames = 1;
};

// Unary
service FileService {
  rpc ListFiles (ListFilesRequest) returns (ListFilesResponse);
}